--- a/src/assets/sass/theme.scss
+++ b/src/assets/sass/theme.scss
@@ -824,6 +824,10 @@ nav a {
     color: #2b2b2b;
   }
 
+  span {
+    white-space: nowrap !important;
+  }
+
   &:hover .extension-login_wrapper.btn.btn-primary.px-sm-4.m-1.mx-sm-3,
   &:hover .web-wallet-login_wrapper.btn.btn-primary.px-sm-4.m-1.mx-sm-3,
   &:hover .test-class_name_wrapper.btn.btn-primary.px-sm-4.m-1.mx-sm-3,
@@ -839,7 +843,7 @@ nav a {
     border: none;
     margin: 0 !important;
     padding: 0 !important;
-    white-space: nowrap;
+    white-space: nowrap !important;
     box-shadow: none !important;
     margin: 0 0.5rem !important;
     color: #c0a055 !important;
@@ -1170,12 +1174,10 @@ footer {
     }
   }
 
-
   video {
-    width: 65% !important;
+    width: 80% !important;
     margin: 1rem !important;
   }
-  
 }
 
 @media screen and (max-width: 450px) {
@@ -1185,6 +1187,7 @@ footer {
         font-size: 0.85rem !important;
         font-weight: 500 !important;
         padding: 0 !important;
+        margin: 0 !important;
       }
     }
   }
