--- a/src/assets/sass/theme.scss
+++ b/src/assets/sass/theme.scss
@@ -824,21 +824,6 @@ nav a {
     color: #2b2b2b;
   }
 
-  span {
-    background-color: transparent;
-    border: none;
-    margin: 0 !important;
-    padding: 0 !important;
-    white-space: nowrap !important;
-    box-shadow: none !important;
-    margin: 0 0.5rem !important;
-    color: #c0a055 !important;
-  }
-
-  &:hover span {
-    color: #2b2b2b !important;
-  }
-
   &:hover .extension-login_wrapper.btn.btn-primary.px-sm-4.m-1.mx-sm-3,
   &:hover .web-wallet-login_wrapper.btn.btn-primary.px-sm-4.m-1.mx-sm-3,
   &:hover .test-class_name_wrapper.btn.btn-primary.px-sm-4.m-1.mx-sm-3,
@@ -1236,9 +1221,18 @@ footer {
     width: 80% !important;
     margin: 1rem !important;
   }
+
+  .item-profil {
+    width: 90% !important;
+
+    .pp {
+      width: 25vw !important;
+      height: 25vw !important;
+    }
+  }
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 600px) {
   .dapp-core-ui-component {
     .btn.btn-primary.px-sm-4.m-1.mx-sm-3 {
       span {
@@ -1248,5 +1242,13 @@ footer {
         margin: 0 !important;
       }
     }
+  }
+
+  .dapp-core-ui-component:first-child {
+    display: none;
+  }
+
+  .dapp-core-ui-component .dapp-core-ui-component {
+    display: flex;
   }
 }
