discord & twitter on phone

--- a/src/assets/sass/theme.scss
+++ b/src/assets/sass/theme.scss
@@ -1212,8 +1212,13 @@ footer {
     .siteDapp {
       margin: 0 0 1rem 0;
     }
-    .social {
-      display: none;
+
+    nav {
+      flex-direction: column;
+    }
+
+    .discord {
+      margin: 1rem 0 !important;
     }
   }
 
