--- a/src/assets/sass/theme.scss
+++ b/src/assets/sass/theme.scss
@@ -19,656 +19,6 @@ Override Bootstrap variables only above.
 
 @import '~bootstrap/scss/reboot';
 
-.custom-classname.btn-primary {
-  background-color: green;
-}
-
-/* Base
--------------------------------------------------- */
-
-// *,
-// *::before,
-// *::after {
-//   padding: 0;
-//   margin: 0;
-//   box-sizing: border-box;
-// }
-
-// html {
-//   min-height: 100%;
-//   font-size: 14px;
-// }
-
-// .wrapper {
-//   min-height: 100vh;
-// }
-
-// .opacity-6 {
-//   opacity: 0.6;
-// }
-
-// .dapp-icon {
-//   padding: 5px;
-//   border-radius: 50%;
-//   background-color: $light;
-//   width: 65px;
-//   height: 65px;
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-//   margin: 0 auto;
-
-//   &.icon-medium {
-//     width: 80px;
-//     height: 80px;
-//   }
-// }
-
-// /* Navbar
-// -------------------------------------------------- */
-
-// header {
-//   display: flex;
-//   justify-content: space-between;
-//   align-items: center;
-//   z-index: 2;
-//   background-color: #f7f7f7;
-//   transition: all 0.3s ease-out;
-//   height: 6.8vh;
-
-//   .btn-hamburger {
-//     display: none;
-//     flex-direction: column;
-//     justify-content: space-between;
-//     width: 40px;
-//     height: 28px;
-//     margin-left: 2rem;
-//     cursor: pointer;
-
-//     .line {
-//       height: 4px;
-//       width: 40px;
-//       background-color: $body;
-//       border-radius: 10px;
-//       transform: rotate(0) translateY(0) translateZ(0);
-//       transition: all 0.3s ease-in-out;
-//     }
-
-//     .active.line:first-child {
-//       transform: rotate(45deg) translateY(10px) translateX(7px);
-//     }
-
-//     .slide.line:nth-child(2) {
-//       opacity: 0;
-//       transform: translateX(-50px);
-//     }
-
-//     .active.line:last-child {
-//       transform: rotate(-45deg) translateY(-10px) translateX(7px);
-//     }
-//   }
-
-//   .menu {
-//     display: flex;
-//     align-items: center;
-//     justify-content: space-between;
-//     margin: 0 auto;
-//     padding: 20px;
-//     margin-left: 2rem;
-//     width: 475px;
-
-//     a {
-//       color: $body;
-//       font-size: 1.2rem;
-//       font-weight: 600;
-//       text-decoration: none;
-//       transition: color 0.1s ease-out;
-//       cursor: pointer;
-
-//       &:hover {
-//         text-decoration: none;
-//         color: #0084ff;
-//       }
-//     }
-//   }
-
-//   .connexion {
-//     display: flex;
-//     align-items: center;
-//     justify-content: space-between;
-//     flex-direction: row;
-//     padding: 20px 0 20px 20px;
-
-//     .method {
-//       display: flex;
-//       align-items: center;
-//       justify-content: space-between;
-
-//       .dapp-core-ui-component {
-//         .btn.btn-primary.px-sm-4.m-1.mx-sm-3 {
-//           background-color: transparent;
-//           border: none;
-//           margin: 0 !important;
-//           padding: 0 0.6rem !important;
-//           box-shadow: none !important;
-
-//           span {
-//             color: $body;
-//             font-size: 1.15rem;
-//             font-weight: 600;
-//             text-decoration: none;
-//             transition: color 0.1s ease-out;
-//             padding: 0 4px;
-
-//             &:hover {
-//               color: #0084ff;
-//             }
-//           }
-//         }
-//       }
-//     }
-
-//     .btn-login {
-//       color: $body;
-//       font-size: 1.2rem;
-//       font-weight: 500;
-//       text-decoration: none;
-//       letter-spacing: 1px;
-//       border: none;
-//       background-color: transparent;
-//       cursor: pointer;
-//       transition: color 0.1s ease-out;
-
-//       &:hover {
-//         text-decoration: none;
-//         font-weight: 500;
-//         color: #0084ff;
-//       }
-//     }
-
-//     .log-out {
-//       color: $body;
-//       font-size: 1.1rem;
-//       font-weight: 500;
-//       text-decoration: none;
-//       border: none;
-//       background-color: transparent;
-
-//       &:hover {
-//         text-decoration: none;
-//         font-weight: 500;
-//         color: #0084ff;
-//       }
-//     }
-//   }
-
-//   .social {
-//     display: flex;
-//     align-items: center;
-//     justify-content: space-between;
-//     flex-direction: row;
-//     margin: 0 auto;
-//     padding: 17px;
-//     margin-right: 2rem;
-//     margin-left: 0;
-//     width: 120px;
-
-//     .twitter svg {
-//       fill: #89c1f1;
-
-//       &:hover {
-//         fill: #0084ff;
-//       }
-//     }
-
-//     .discord svg {
-//       path:first-child {
-//         fill: #8c9eff;
-//       }
-//       &:hover path:first-child {
-//         fill: #0084ff;
-//       }
-//     }
-//   }
-// }
-
-// .opened {
-//   display: flex;
-//   flex-direction: column;
-//   width: 100%;
-//   background-color: #f7f7f7;
-
-//   .menu {
-//     display: flex !important;
-//     align-items: center;
-//     flex-direction: column;
-//     justify-content: space-between;
-//     margin: 0 auto;
-
-//     a {
-//       color: $body;
-//       font-size: 1.2rem;
-//       font-weight: 600;
-//       text-decoration: none;
-//       transition: color 0.1s ease-out;
-//       cursor: pointer;
-
-//       &:hover {
-//         text-decoration: none;
-//         color: #0084ff;
-//       }
-//     }
-//   }
-
-//   .social {
-//     display: flex !important;
-//     align-items: center;
-//     justify-content: space-between;
-//     flex-direction: row;
-//     margin: 0 auto;
-//     padding: 7px;
-//     width: 90px;
-
-//     .twitter svg {
-//       fill: #89c1f1;
-
-//       &:hover {
-//         fill: #0084ff;
-//       }
-//     }
-
-//     .discord svg {
-//       path:first-child {
-//         fill: #8c9eff;
-//       }
-//       &:hover path:first-child {
-//         fill: #0084ff;
-//       }
-//     }
-//   }
-// }
-
-// /* Home
-// ----------------------*/
-
-// .main-container {
-//   display: flex;
-//   flex-direction: column;
-//   min-height: 100vh;
-//   width: 100%;
-
-//   .home-container {
-//     position: relative;
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//     min-height: 35vh;
-//     width: 100%;
-//     background: #0f0c29;
-//     background: url('https://raducks.com/images/stars.png'),
-//       -webkit-linear-gradient(to left, #24243e, #302b63, #0f0c29);
-//     .line-break {
-//       position: absolute;
-//       bottom: -2px;
-//     }
-//     background: url('https://raducks.com/images/stars.png'),
-//       linear-gradient(to left, #24243e, #302b63, #0f0c29);
-//     .line-break {
-//       position: absolute;
-//       bottom: -2px;
-//     }
-//     background-size: contain;
-//   }
-
-//   .section1 {
-//     position: relative;
-//     display: flex;
-//     flex-direction: column;
-//     background-color: #e0e0e0;
-//     min-height: 100vh;
-//     width: 100%;
-
-//     .mint-container {
-//       display: flex;
-//       flex-direction: row;
-//       justify-content: space-between;
-//       align-items: center;
-
-//       img {
-//         width: 10%;
-//         height: 10%;
-//         margin-left: 5rem;
-//       }
-
-//       .mint-btn {
-//         margin-right: 5rem;
-//       }
-//     }
-//   }
-
-//   .section2 {
-//     position: relative;
-//     background: #fffde4; /* fallback for old browsers */
-//     background: -webkit-linear-gradient(
-//       to top,
-//       #28eb99,
-//       #fffde4
-//     ); /* Chrome 10-25, Safari 5.1-6 */
-//     background: linear-gradient(
-//       to top,
-//       #28eb99,
-//       #fffde4
-//     ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-//     min-height: 75vh;
-//     width: 100%;
-//   }
-// }
-
-// /* Dashboard
-// -------------------------------------------------- */
-// .dapp-super-container {
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-//   width: 100%;
-//   padding: 5rem;
-// }
-
-// .dashboard-container {
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-//   flex-direction: column;
-
-//   .mint-btn {
-//     padding: 0.6rem 1.5rem;
-//     border: 2px solid $body;
-//     border-radius: 10px;
-//     margin-right: 2rem;
-//     cursor: pointer;
-//   }
-
-//   .eggs {
-//     display: flex;
-//     flex-direction: column;
-
-//     .egg {
-//       display: flex;
-//       justify-content: space-between;
-//       align-items: center;
-//       border: 1px solid #111;
-
-//       img {
-//         width: 30%;
-//       }
-//     }
-//   }
-
-//   .builder-container {
-//     display: flex;
-//     width: 100%;
-
-//     .builder-left,
-//     .builder-right {
-//       flex: 1 1 0;
-//     }
-
-//     .builder-left {
-//       display: flex;
-//       justify-content: center;
-//       align-items: center;
-//       .canvas {
-//         position: relative;
-//         width: 30vw;
-//         height: 30vw;
-//         border: 1px solid $body;
-
-//         img {
-//           position: absolute;
-//           top: 0;
-//           bottom: 0;
-//           left: 0;
-//           right: 0;
-//           width: 100%;
-//           -webkit-user-drag: none;
-//         }
-//       }
-//     }
-
-//     .builder-right {
-//       .select-container {
-//         display: flex;
-//         flex-direction: row;
-//       }
-
-//       .select-active-container {
-//         display: flex;
-//         flex-direction: column;
-//         cursor: pointer;
-//         width: 150px;
-//         height: 30vw;
-//         justify-content: space-between;
-//         border: 2px solid $body;
-//         border-top: none;
-
-//         .select-active {
-//           display: flex;
-//           justify-content: center;
-//           align-items: center;
-//           white-space: nowrap;
-//           height: 100%;
-//           padding: 0 0.2rem;
-//           border-top: 2px solid $body;
-//         }
-//       }
-//       .layers {
-//         height: 30vw;
-//         overflow-y: scroll;
-//         .layer {
-//           display: grid;
-//           grid-template-columns: repeat(4, 1fr);
-//           img {
-//             width: 100%;
-//             cursor: pointer;
-//             border: 1px solid #111;
-//           }
-//         }
-//       }
-
-//       .buttons {
-//         display: flex;
-//         flex-direction: row;
-//         justify-content: center;
-//       }
-//     }
-//   }
-// }
-
-// .action-btn {
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: center;
-//   align-items: center;
-//   color: $body;
-//   margin: 3px 7px;
-//   padding: 0.4rem 1.5rem;
-//   border: 1px solid $body;
-//   border-radius: 5px;
-//   cursor: pointer;
-
-//   button {
-//     border-radius: 50%;
-//     width: 40px;
-//     height: 40px;
-//     background-color: $white;
-
-//     &:hover {
-//       opacity: 0.9;
-//     }
-//   }
-// }
-
-// .transactions {
-//   .transaction-icon {
-//     border-radius: 50%;
-//     width: 40px;
-//     height: 40px;
-//   }
-
-//   &.table {
-//     .transaction-hash .trim {
-//       @include media-breakpoint-down(xl) {
-//         max-width: none;
-//       }
-//       @include media-breakpoint-down(lg) {
-//         max-width: 26rem;
-//       }
-//       @include media-breakpoint-down(md) {
-//         max-width: 12rem;
-//       }
-//       @include media-breakpoint-down(sm) {
-//         max-width: 8rem;
-//       }
-//     }
-
-//     td,
-//     tr {
-//       padding: 0.65rem;
-//     }
-
-//     td {
-//       white-space: nowrap;
-//       vertical-align: middle;
-//     }
-
-//     tr:last-of-type {
-//       td {
-//         border-bottom: 1px solid #dee2e6;
-//       }
-//     }
-//   }
-// }
-
-// /* Actions
-// -------------------------------------------------- */
-
-// .not-allwed {
-//   cursor: not-allowed;
-// }
-
-// /* Loader, Transaction success/Fail
-// -------------------------------------------------- */
-// .page-state {
-//   .lds-ellipsis {
-//     display: inline-block;
-//     position: relative;
-//     width: 64px;
-//     height: 64px;
-//   }
-//   .lds-ellipsis div {
-//     position: absolute;
-//     top: 27px;
-//     width: 11px;
-//     height: 11px;
-//     border-radius: 50%;
-//     background: rgba(0, 0, 0, 0.1);
-//     animation-timing-function: cubic-bezier(0, 1, 1, 0);
-//   }
-//   .bg-blue .lds-ellipsis div {
-//     background: rgba(255, 255, 255, 0.4);
-//   }
-//   .lds-ellipsis div:nth-child(1) {
-//     left: 6px;
-//     animation: lds-ellipsis1 0.6s infinite;
-//   }
-//   .lds-ellipsis div:nth-child(2) {
-//     left: 6px;
-//     animation: lds-ellipsis2 0.6s infinite;
-//   }
-//   .lds-ellipsis div:nth-child(3) {
-//     left: 26px;
-//     animation: lds-ellipsis2 0.6s infinite;
-//   }
-//   .lds-ellipsis div:nth-child(4) {
-//     left: 45px;
-//     animation: lds-ellipsis3 0.6s infinite;
-//   }
-//   @keyframes lds-ellipsis1 {
-//     0% {
-//       transform: scale(0);
-//     }
-//     100% {
-//       transform: scale(1);
-//     }
-//   }
-//   @keyframes lds-ellipsis3 {
-//     0% {
-//       transform: scale(1);
-//     }
-//     100% {
-//       transform: scale(0);
-//     }
-//   }
-//   @keyframes lds-ellipsis2 {
-//     0% {
-//       transform: translate(0, 0);
-//     }
-//     100% {
-//       transform: translate(19px, 0);
-//     }
-//   }
-// }
-
-// /* Footer
-// -------------------------------------------------- */
-// footer {
-//   position: absolute;
-//   bottom: 0;
-//   display: flex;
-//   justify-content: center;
-//   width: 100%;
-//   div {
-//     font-size: 0.9rem;
-//     display: inline-block;
-//     font-weight: 400;
-//   }
-// }
-
-// @media screen and (max-width: 1045px) {
-//   .btn-hamburger {
-//     display: flex !important;
-//     margin-left: 1rem !important;
-//     width: 35px !important;
-
-//     .line {
-//       width: 35px !important;
-//       height: 4px !important;
-//     }
-//   }
-
-//   .menu {
-//     display: none !important;
-//   }
-
-//   .connexion {
-//     width: 100%;
-//     margin-right: 1rem;
-
-//     // div:first-child {
-//     //   display: none !important;
-//     // }
-//   }
-
-//   .social {
-//     display: none !important;
-//   }
-
-//   .home-container img {
-//     width: 50%;
-//   }
-// }
-
 *,
 *::before,
 *::after {
@@ -920,9 +270,8 @@ nav a {
       transform: rotate(135deg);
       transition: transform 0.3s ease-out;
       opacity: 1;
-
     }
-    &:hover .arrow{
+    &:hover .arrow {
       border-right: 2px solid #e7d19e;
       border-bottom: 2px solid #e7d19e;
     }
@@ -1189,7 +538,7 @@ nav a {
   }
 
   .item-title-faq {
-    margin-bottom: 1rem;
+    margin: 1.3rem 0;
     text-align: center;
     color: #c0a055;
     background-color: #252525;
