delete anchor is dapp & add address restriction for dapp test

--- a/src/assets/sass/theme.scss
+++ b/src/assets/sass/theme.scss
@@ -663,6 +663,9 @@ footer {
     .discord {
       margin: 1rem 0 !important;
     }
+    .twitter {
+      margin: 0 !important;
+    }
   }
 
   video {
