--- a/src/assets/css/dashboard.css
+++ b/src/assets/css/dashboard.css
@@ -49,7 +49,7 @@
   flex-direction: row;
 }
 
-.select-quantity div {
+.select-quantity div:nth-child(2) {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -63,6 +63,23 @@
   margin: 0.5rem;
   cursor: pointer;
 }
+
+#minus, #plus {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #c0a055;
+  color: #252525;
+  border: none;
+  font-weight: 600;
+  border-radius: 5px;
+  padding-top: 0.05rem;
+  min-width: 40px;
+  margin: 0.5rem;
+  cursor: pointer;
+  user-select: none;
+}
+
 
 .select-quantity div:hover {
   background-color: #e7d19e;
@@ -82,4 +99,37 @@
 
 .mint-btn:hover {
   background-color: #e7d19e;
+}
+
+/* .dapp-content-nfts {
+} */
+
+.nft-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 50vh;
+  font-size: 1.4rem;
+  width: 100%;
+}
+
+.nft-list .container-nft {
+  position: relative;
+  margin: 1.5rem;
+}
+
+.nft-list .container-nft img {
+  width: 15vw;
+}
+
+.nft-list .container-nft .nft-tag {
+  text-align: center;
+}
+
+
+.reveal {
+  text-align: center;
+  cursor: pointer;
 }
