detail name & change video to img

--- a/src/assets/sass/theme.scss
+++ b/src/assets/sass/theme.scss
@@ -516,7 +516,7 @@ nav a {
     align-items: center;
     flex-wrap: wrap;
 
-    video {
+    img {
       width: 41%;
       margin: 2rem;
       border: 3px solid #c0a055;
